--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ gasket = { git = "https://github.com/construkts/gasket-rs.git" }
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
 rayon = "1.5.3"
+rocksdb = "0.19.0"
