--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 minicbor = "0.14.1"
 prometheus_exporter = { version = "0.8.4", default-features = false }
-# gasket = { path = "../../construkts/gasket-rs" }
-gasket = { git = "https://github.com/construkts/gasket-rs.git" }
+gasket = { path = "../../construkts/gasket-rs" }
+# gasket = { git = "https://github.com/construkts/gasket-rs.git" }
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
 rayon = "1.5.3"
