--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,13 @@ serde_json = "1.0.79"
 minicbor = "0.14.1"
 prometheus_exporter = { version = "0.8.4", default-features = false }
 gasket = { path = "../../construkts/gasket-rs" }
-# gasket = { git = "https://github.com/construkts/gasket-rs.git" }
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
 rayon = "1.5.3"
 rocksdb = "0.19.0"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
+bincode = "1.3.3"
+
+[dev-dependencies]
+tempfile = "3.3.0"
