--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,12 @@ rocksdb = "0.19.0"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 bincode = "1.3.3"
+tonic = "0.8"
+prost = "0.11"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+
+[build-dependencies]
+tonic-build = "0.8"
 
 [dev-dependencies]
 tempfile = "3.3.0"
