--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ rocksdb = "0.19.0"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 bincode = "1.3.3"
+miette = { version = "5.5.0", features = ["fancy"] }
 
 [dev-dependencies]
 tempfile = "3.3.0"
