--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,12 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-# pallas = "0.14.0"
-pallas = { path = "../pallas/pallas" }
+pallas = "0.16.0"
+# pallas = { path = "../pallas/pallas" }
 hex = "0.4.3"
 net2 = "0.2.37"
 bech32 = "0.8.1"
-clap = { version = "3.2.6", features = ["derive"] }
+clap = { version = "4.0.0", features = ["derive"] }
 log = "0.4.14"
 env_logger = "0.9.0"
 config = { version = "0.13.0", default-features = false, features = [
@@ -28,7 +28,8 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 minicbor = "0.14.1"
 prometheus_exporter = { version = "0.8.4", default-features = false }
-gasket = { path = "../../construkts/gasket-rs" }
+# gasket = { path = "../../construkts/gasket-rs" }
+gasket = { git = "https://github.com/construkts/gasket-rs.git" }
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
 rayon = "1.5.3"
