--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ gasket = { git = "https://github.com/construkts/gasket-rs.git" }
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
 rayon = "1.5.3"
-rocksdb = "0.19.0"
+rocksdb = { version = "0.19.0", default-features = false }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 bincode = "1.3.3"
