--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,12 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = "0.16.0"
+pallas = "0.19.0-alpha.0"
 # pallas = { path = "../pallas/pallas" }
+
+gasket = { version = "^0.4", features = ["derive"] }
+# gasket = { path = "../../construkts/gasket-rs" }
+
 hex = "0.4.3"
 net2 = "0.2.37"
 bech32 = "0.8.1"
@@ -28,8 +32,6 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 minicbor = "0.14.1"
 prometheus_exporter = { version = "0.8.4", default-features = false }
-# gasket = { path = "../../construkts/gasket-rs" }
-gasket = { git = "https://github.com/construkts/gasket-rs.git" }
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
 rayon = "1.5.3"
@@ -38,6 +40,8 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 bincode = "1.3.3"
 miette = { version = "5.5.0", features = ["fancy"] }
+tokio = { version = "1.27.0", features = ["rt"] }
+async-trait = "0.1.68"
 
 [dev-dependencies]
 tempfile = "3.3.0"
