--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,8 +40,12 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 bincode = "1.3.3"
 miette = { version = "5.5.0", features = ["fancy"] }
-tokio = { version = "1.27.0", features = ["rt"] }
+tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread"] }
 async-trait = "0.1.68"
+utxorpc = { version = "0.1.0", path = "../../utxorpc/rust-sdk" }
+tonic = "0.9.2"
+bytes = "1.4.0"
+futures-core = "0.3.28"
 
 [dev-dependencies]
 tempfile = "3.3.0"
