--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ pallas = "0.19.0-alpha.0"
 gasket = { version = "^0.4", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs" }
 
+utxorpc = { version = "1.0.0-alpha.0" }
+# utxorpc = { path = "../../utxorpc/rust-sdk" }
+
 hex = "0.4.3"
 net2 = "0.2.37"
 bech32 = "0.8.1"
@@ -40,8 +43,11 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 bincode = "1.3.3"
 miette = { version = "5.5.0", features = ["fancy"] }
-tokio = { version = "1.27.0", features = ["rt"] }
+tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread"] }
 async-trait = "0.1.68"
+tonic = "0.9.2"
+bytes = "1.4.0"
+futures-core = "0.3.28"
 
 [dev-dependencies]
 tempfile = "3.3.0"
