--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ async-trait = "0.1.68"
 tonic = "0.9.2"
 bytes = "1.4.0"
 futures-core = "0.3.28"
+tonic-web = "0.9.2"
 
 [dev-dependencies]
 tempfile = "3.3.0"
