--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ bincode = "1.3.3"
 miette = { version = "5.9.0", features = ["fancy"] }
 tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread"] }
 async-trait = "0.1.68"
-tonic = "0.9.2"
+tonic = { version = "0.9.2", features = ["tls"] }
 bytes = "1.4.0"
 futures-core = "0.3.28"
 tonic-web = "0.9.2"
