--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,8 @@ bytes = "1.4.0"
 futures-core = "0.3.28"
 tonic-web = "0.9.2"
 tokio-stream = { version = "0.1.14", features = ["sync"] }
+futures-util = "0.3.28"
+async-stream = "0.3.5"
 
 [dev-dependencies]
 tempfile = "3.3.0"
