--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = "0.19.0-alpha.2"
-# pallas = { path = "../pallas/pallas" }
+# pallas = "0.19.0-alpha.2"
+pallas = { path = "../pallas/pallas" }
 
 gasket = { version = "^0.5", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
