--- a/examples/sync-preview/dolos.toml
+++ b/examples/sync-preview/dolos.toml
@@ -11,3 +11,7 @@ path = "./tmp/applydb"
 
 [serve.grpc]
 listen_address = "[::]:50051"
+
+[serve.ouroboros]
+listen_address = "localhost:30013"
+magic = 0
