--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-# pallas = "0.19.0-alpha.2"
-pallas = { path = "../pallas/pallas" }
+pallas = "0.19.0"
+# pallas = { path = "../pallas/pallas" }
 
 gasket = { version = "^0.5", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
@@ -27,10 +27,7 @@ bech32 = "0.8.1"
 clap = { version = "4.3.0", features = ["derive"] }
 log = "0.4.18"
 env_logger = "0.9.0"
-config = { version = "0.13.3", default-features = false, features = [
-    "toml",
-    "json",
-] }
+config = { version = "0.13.3", default-features = false, features = ["toml", "json"] }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 minicbor = "0.14.1"
@@ -38,9 +35,7 @@ prometheus_exporter = { version = "0.8.4", default-features = false }
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
 rayon = "1.5.3"
-rocksdb = { version = "0.21.0", default-features = false, features = [
-    "multi-threaded-cf",
-] }
+rocksdb = { version = "0.21.0", default-features = false, features = ["multi-threaded-cf"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 bincode = "1.3.3"
