--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = "0.19.0"
+# pallas = "0.19.0"
 # pallas = { path = "../pallas/pallas" }
+pallas = { git = "https://github.com/txpipe/pallas.git" }
 
 gasket = { version = "^0.5", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
