--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,8 @@ jobs:
       - name: install deps [Ubuntu]
         if: matrix.os == 'ubuntu-latest'
         run: |
-          sudo apt-get install llvm-dev libclang-dev clang pkg-config libssl-dev
+          sudo apt update
+          sudo apt install make llvm-dev libclang-dev clang pkg-config libssl-dev
 
       - name: install deps [MacOS]
         if: matrix.os == 'macOS-latest'
