--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,14 @@ jobs:
         if: matrix.release_for == 'Linux-GNU-armv7'
         run: |
           sudo apt update
-          sudo apt install gcc-arm-linux-gnueabihf
+          sudo apt install gcc-arm-linux-gnueabihf g++-multilib
+
+      - name: "get cross-compile deps"
+        uses: ryankurte/action-apt@v0.4.0
+        if: matrix.release_for == 'Linux-GNU-armv7'
+        with:
+          arch: armhf
+          packages: "libssl-dev:armhf"
 
       - name: install deps [MacOS]
         if: matrix.os == 'macOS-latest'
