--- a/Cross.toml
+++ b/Cross.toml
@@ -1,5 +1,7 @@
 [target.armv7-unknown-linux-gnueabihf]
 pre-build = [
     "dpkg --add-architecture $CROSS_DEB_ARCH",
-    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH",
+    "apt-get update",
+    "apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH",
+    "apt-get install --assume-yes --no-install-recommends libclang-3.9-dev clang-3.9",
 ]
