fix binary names

--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:latest
 
 ARG TARGETARCH
-COPY Linux-GNU-${TARGETARCH}-dolos /bin/dolos
+COPY dolos-Linux-GNU-${TARGETARCH} /bin/dolos
 RUN ln -s /bin/dolos /dolos
 
 ENTRYPOINT ["dolos"]
