--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
       - name: upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: binary-${{ matrix.release_for }}
+          name: dolos-${{ matrix.release_for }}
           path: ${{ matrix.release_for }}-${{ matrix.bin }}
 
   docker:
@@ -151,6 +151,6 @@ jobs:
       - name: create release
         uses: softprops/action-gh-release@v1
         with:
-          files: binary-*/*
+          files: dolos-*/*
           body_path: RELEASE.md
           draft: true
