--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -1,9 +1,9 @@
-FROM debian:buster-slim
+FROM debian:12-slim
 
 RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
 
 ARG TARGETARCH
-COPY dolos-Linux-GNU-${TARGETARCH} /bin/dolos
+COPY dolos-Linux-GNU-${TARGETARCH}/Linux-GNU-${TARGETARCH} /bin/dolos
 RUN chmod +x /bin/dolos
 RUN ln -s /bin/dolos /dolos
 
