use same artifact for everything

--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:12-slim
 RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
 
 ARG TARGETARCH
-COPY dolos-Linux-GNU-${TARGETARCH}/Linux-GNU-${TARGETARCH} /bin/dolos
+COPY binaries/Linux-GNU-${TARGETARCH}-dolos /bin/dolos
 RUN chmod +x /bin/dolos
 RUN ln -s /bin/dolos /dolos
 
