feat: include genesis files in docker image

--- a/.github/image/Dockerfile
+++ b/.github/image/Dockerfile
@@ -2,8 +2,10 @@ FROM debian:12-slim
 
 RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
 
+COPY genesis /etc/genesis
+
 ARG TARGETARCH
-COPY binaries/Linux-GNU-${TARGETARCH}-dolos /bin/dolos
+COPY bin/Linux-GNU-${TARGETARCH}-dolos /bin/dolos
 RUN chmod +x /bin/dolos
 RUN ln -s /bin/dolos /dolos
 
