--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,12 +107,14 @@ jobs:
 
       - name: Download artifacts
         uses: actions/download-artifact@v3
+        with:
+          name: binaries
+          path: .github/image/bin
 
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: .github/Dockerfile
+          context: .github/image
           platforms: linux/arm64,linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
