--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,8 @@ jobs:
         uses: actions/checkout@v3
 
       - uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: "release"
 
       - name: build binary
         uses: houseabsolute/actions-rust-cross@v0
