--- a/examples/sync-preview/dolos.toml
+++ b/examples/sync-preview/dolos.toml
@@ -10,5 +10,12 @@ k_param = 10000
 listen_address = "[::]:50051"
 
 [serve.ouroboros]
-listen_address = "127.0.0.1:30013"
+listen_address = "localhost:30013"
 magic = 2
+
+[byron]
+path = "./byron.json"
+hash = "xxx"
+
+[logging]
+max_level = "debug"
