--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dolos"
-description = "Cardano Dolos"
-version = "0.5.0"
+description = "A Cardano data-node built in Rust"
+version = "0.6.0"
 edition = "2021"
 repository = "https://github.com/txpipe/dolos"
 homepage = "https://github.com/txpipe/dolos"
