feat: provide install script

--- a/.github/image/Dockerfile
+++ b/.github/image/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/
 COPY genesis /etc/genesis
 
 ARG TARGETARCH
-COPY bin/Linux-GNU-${TARGETARCH}-dolos /bin/dolos
+COPY bin/dolos-Linux-${TARGETARCH} /bin/dolos
 RUN chmod +x /bin/dolos
 RUN ln -s /bin/dolos /dolos
 
