feat(phase-1 validations): add support for ShelleyMA

--- a/examples/sync-mainnet/dolos.toml
+++ b/examples/sync-mainnet/dolos.toml
@@ -1,6 +1,7 @@
 [upstream]
 peer_address = "relays-new.cardano-mainnet.iohk.io:3001"
 network_magic = 764824073
+network_id = 1
 
 [rolldb]
 path = "./tmp/rolldb"
