--- a/examples/sync-preprod/dolos.toml
+++ b/examples/sync-preprod/dolos.toml
@@ -1,6 +1,7 @@
 [upstream]
 peer_address = "preprod-node.world.dev.cardano.org:30000"
 network_magic = 1
+network_id = 0
 
 [rolldb]
 path = "./tmp/rolldb"
