--- a/examples/sync-preview/dolos.toml
+++ b/examples/sync-preview/dolos.toml
@@ -1,6 +1,7 @@
 [upstream]
 peer_address = "preview-node.world.dev.cardano.org:30002"
 network_magic = 2
+network_id = 0
 
 [rolldb]
 path = "./tmp/rolldb"
