--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ futures-util = "0.3.28"
 async-stream = "0.3.5"
 async-recursion = "1.0.5"
 serde_with = "3.4.0"
+mithril-client = "0.5.7"
 
 [dev-dependencies]
 tempfile = "3.3.0"
