feat: make phase-1 validations optional

--- a/examples/sync-preview/dolos.toml
+++ b/examples/sync-preview/dolos.toml
@@ -2,6 +2,7 @@
 peer_address = "preview-node.world.dev.cardano.org:30002"
 network_magic = 2
 network_id = 0
+phase1_validation_enabled = false
 
 [rolldb]
 path = "./tmp/rolldb"
