--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,11 @@ futures-util = "0.3.28"
 async-stream = "0.3.5"
 async-recursion = "1.0.5"
 serde_with = "3.4.0"
-mithril-client = "0.5.7"
+mithril-client = { version = "0.5.7", optional = true }
 
 [dev-dependencies]
 tempfile = "3.3.0"
+
+[features]
+mithril = ["mithril-client"]
+default = ["mithril"]
