--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           - release_for: Linux-arm64
             build_on: ubuntu-latest
             target: "aarch64-unknown-linux-gnu"
-            args: "--locked --release"
+            args: "--locked --release --no-default-features"
 
           - release_for: Windows-x86_64
             build_on: windows-latest
