--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ tonic-web = "0.9.2"
 tokio-stream = { version = "0.1.14", features = ["sync"] }
 futures-util = "0.3.28"
 async-stream = "0.3.5"
+async-recursion = "1.0.5"
 
 [dev-dependencies]
 tempfile = "3.3.0"
