--- a/examples/sync-preview/dolos.toml
+++ b/examples/sync-preview/dolos.toml
@@ -13,5 +13,5 @@ path = "./tmp/applydb"
 listen_address = "[::]:50051"
 
 [serve.ouroboros]
-listen_address = "localhost:30013"
+listen_address = "127.0.0.1:30013"
 magic = 2
