--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = "=0.19.1"
+# pallas = "=0.21.0"
+pallas = { git = "https://github.com/txpipe/pallas", rev = "00575b4c550cf042e354922699be23d420c8a813" }
 # pallas = { path = "../pallas/pallas" }
 
 gasket = { version = "^0.5", features = ["derive"] }
