--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,16 +37,18 @@ bincode = "1.3.3"
 miette = { version = "5.9.0", features = ["fancy"] }
 tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread"] }
 async-trait = "0.1.68"
-tonic = { version = "0.9.2", features = ["tls"] }
+tonic = { version = "^0.9", features = ["tls"] }
+tonic-web = "^0.9"
+tonic-reflection = "^0.9"
 bytes = "1.4.0"
 futures-core = "0.3.28"
-tonic-web = "0.9.2"
 tokio-stream = { version = "0.1.14", features = ["sync"] }
 futures-util = "0.3.28"
 async-stream = "0.3.5"
 async-recursion = "1.0.5"
 serde_with = "3.4.0"
 mithril-client = { version = "0.5.7", optional = true }
+protoc-wkt = "1.0.0"
 
 [dev-dependencies]
 tempfile = "3.3.0"
