--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,13 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", features = ["unstable"] }
+pallas = { version = "^0.23", features = ["unstable"] }
 # pallas = { path = "../pallas/pallas", features = ["unstable"] }
 
 gasket = { version = "^0.5", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
 
-utxorpc = { version = "1.0.0-alpha.1" }
-# utxorpc = { path = "../../utxorpc/rust-sdk" }
+utxorpc-spec = { version = "0.3.0" }
 
 hex = "0.4.3"
 bech32 = "0.8.1"
