--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,32 +12,24 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", features = [
-    "unstable",
-] }
+pallas = { version = "^0.23", features = ["unstable"] }
 # pallas = { path = "../pallas/pallas", features = ["unstable"] }
 
 gasket = { version = "^0.5", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
 
-utxorpc = { version = "1.0.0-alpha.1" }
-# utxorpc = { path = "../../utxorpc/rust-sdk" }
+utxorpc-spec = { version = "0.3.0" }
 
 hex = "0.4.3"
 bech32 = "0.8.1"
 clap = { version = "4.3.0", features = ["derive"] }
 log = "0.4.18"
-config = { version = "0.13.3", default-features = false, features = [
-    "toml",
-    "json",
-] }
+config = { version = "0.13.3", default-features = false, features = ["toml", "json"] }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.107"
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
-rocksdb = { version = "0.21.0", default-features = false, features = [
-    "multi-threaded-cf",
-] }
+rocksdb = { version = "0.21.0", default-features = false, features = ["multi-threaded-cf"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 bincode = "1.3.3"
