--- a/examples/sync-preprod/dolos.toml
+++ b/examples/sync-preprod/dolos.toml
@@ -2,6 +2,7 @@
 peer_address = "preprod-node.world.dev.cardano.org:30000"
 network_magic = 1
 network_id = 0
+phase1_validation_enabled = false
 
 [rolldb]
 path = "./tmp/rolldb"
