--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", branch = "feat/babbage-phase-1-validations", features = ["unstable"] }
+pallas = { git = "https://github.com/txpipe/pallas.git", features = ["unstable"] }
 # pallas = { version = "^0.23", features = ["unstable"] }
 # pallas = { path = "../pallas/pallas", features = ["unstable"] }
 
@@ -30,7 +30,7 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.107"
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
-rocksdb = { version = "0.21.0", default-features = false, features = ["multi-threaded-cf"] }
+rocksdb = { version = "0.22.0", default-features = false, features = ["multi-threaded-cf"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 bincode = "1.3.3"
