--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ gasket = { version = "^0.5", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
 
 utxorpc-spec = { version = "0.4.4" }
+redb = { version = "1.5.1" }
 
 hex = "0.4.3"
 bech32 = "0.8.1"
