--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
       - name: upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: binaries
+          name: binaries-${{ matrix.release_for }}
           path: dolos-${{ matrix.release_for }}${{ matrix.ext }}
 
   docker:
@@ -116,7 +116,8 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: binaries
+          pattern: binaries-*
+          merge-multiple: true
           path: .github/image/bin
 
       # we need to rename the artifact so that the name matches
