--- a/examples/sync-mainnet/dolos.toml
+++ b/examples/sync-mainnet/dolos.toml
@@ -1,12 +1,20 @@
-[upstream]
-peer_address = "relays-new.cardano-mainnet.iohk.io:3001"
-network_magic = 764824073
-network_id = 1
-phase1_validation_enabled = false
-
 [rolldb]
 path = "./tmp/rolldb"
 k_param = 1000
+
+[upstream]
+peer_address = "relays-new.cardano-mainnet.iohk.io:3001"
+network_magic = 764824073
+
+[sync]
+network_id = 1
+phase1_validation_enabled = false
+
+[byron]
+path = "./byron.json"
+
+[shelley]
+path = "./shelley.json"
 
 [serve.grpc]
 listen_address = "[::]:50051"
@@ -14,9 +22,3 @@ listen_address = "[::]:50051"
 [serve.ouroboros]
 listen_address = "localhost:30013"
 magic = 0
-
-[byron]
-path = "./byron.json"
-
-[shelley]
-path = "./shelley.json"
