--- a/examples/sync-preprod/dolos.toml
+++ b/examples/sync-preprod/dolos.toml
@@ -1,12 +1,23 @@
 [upstream]
 peer_address = "preprod-node.world.dev.cardano.org:30000"
 network_magic = 1
-network_id = 0
-phase1_validation_enabled = false
 
 [rolldb]
 path = "./tmp/rolldb"
 k_param = 1000
+
+[sync]
+network_id = 0
+phase1_validation_enabled = false
+
+[submit]
+prune_after_confirmations = 10000
+
+[byron]
+path = "./byron.json"
+
+[shelley]
+path = "./shelley.json"
 
 [serve.grpc]
 listen_address = "[::]:50051"
@@ -15,17 +26,5 @@ listen_address = "[::]:50051"
 listen_address = "localhost:30013"
 magic = 0
 
-[byron]
-path = "./byron.json"
-
-[shelley]
-path = "./shelley.json"
-
 [logging]
 max_level = "debug"
-
-[submit.grpc]
-listen_address = "[::]:50052"
-prune_after_confirmations = 10000
-peer_addresses = ["preprod-node.world.dev.cardano.org:30000"]
-peer_magic = 1
