--- a/examples/sync-preview/dolos.toml
+++ b/examples/sync-preview/dolos.toml
@@ -1,12 +1,23 @@
 [upstream]
 peer_address = "preview-node.world.dev.cardano.org:30002"
 network_magic = 2
-network_id = 0
-phase1_validation_enabled = false
 
 [rolldb]
 path = "./tmp/rolldb"
 k_param = 10000
+
+[sync]
+network_id = 0
+phase1_validation_enabled = false
+
+[submit]
+prune_after_confirmations = false
+
+[byron]
+path = "./byron.json"
+
+[shelley]
+path = "./shelley.json"
 
 [serve.grpc]
 listen_address = "[::]:50051"
@@ -14,12 +25,6 @@ listen_address = "[::]:50051"
 [serve.ouroboros]
 listen_address = "localhost:30013"
 magic = 2
-
-[byron]
-path = "./byron.json"
-
-[shelley]
-path = "./shelley.json"
 
 [logging]
 max_level = "debug"
