--- a/examples/sync-preprod/dolos.toml
+++ b/examples/sync-preprod/dolos.toml
@@ -1,23 +1,22 @@
 [upstream]
 peer_address = "preprod-node.world.dev.cardano.org:30000"
 network_magic = 1
+is_testnet = true
 
-[rolldb]
+[storage]
 path = "./tmp/rolldb"
-k_param = 1000
+wal_size = 1000
 
 [sync]
-network_id = 0
-phase1_validation_enabled = false
+pull_batch_size = 200
 
 [submit]
-prune_after_confirmations = 10000
+prune_height = 10000
 
-[byron]
-path = "./byron.json"
-
-[shelley]
-path = "./shelley.json"
+[genesis]
+byron_path = "./byron.json"
+shelley_path = "./shelley.json"
+alonzo_path = "./alonzo.json"
 
 [serve.grpc]
 listen_address = "[::]:50051"
