--- a/examples/sync-mainnet/dolos.toml
+++ b/examples/sync-mainnet/dolos.toml
@@ -1,20 +1,22 @@
-[rolldb]
-path = "./tmp/rolldb"
-k_param = 1000
-
 [upstream]
 peer_address = "relays-new.cardano-mainnet.iohk.io:3001"
 network_magic = 764824073
+is_testnet = false
+
+[storage]
+path = "./tmp/rolldb"
+wal_size = 1000
 
 [sync]
-network_id = 1
-phase1_validation_enabled = false
+pull_batch_size = 200
 
-[byron]
-path = "./byron.json"
+[submit]
+prune_height = 10000
 
-[shelley]
-path = "./shelley.json"
+[genesis]
+byron_path = "./byron.json"
+shelley_path = "./shelley.json"
+alonzo_path = "./alonzo.json"
 
 [serve.grpc]
 listen_address = "[::]:50051"
@@ -22,3 +24,6 @@ listen_address = "[::]:50051"
 [serve.ouroboros]
 listen_address = "localhost:30013"
 magic = 0
+
+[logging]
+max_level = "debug"
