--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,8 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 bincode = "1.3.3"
 miette = { version = "5.9.0", features = ["fancy"] }
-tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread"] }
+tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "signal"] }
+tokio-util = { version = "0.7", features = ["full"] }
 async-trait = "0.1.68"
 tonic = { version = "^0.11", features = ["tls"] }
 tonic-web = "^0.11"
