--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ rocksdb = { version = "0.22.0", default-features = false, features = ["multi-thr
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 bincode = "1.3.3"
-miette = { version = "5.9.0", features = ["fancy"] }
+miette = { version = "7.2.0", features = ["fancy"] }
 tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread"] }
 async-trait = "0.1.68"
 tonic = { version = "^0.11", features = ["tls"] }
@@ -45,9 +45,10 @@ tokio-stream = { version = "0.1.14", features = ["sync"] }
 futures-util = "0.3.28"
 async-stream = "0.3.5"
 serde_with = "3.4.0"
-mithril-client = { version = "0.5.17", optional = true, features = ["fs"] }
+mithril-client = { version = "^0.8", optional = true, features = ["fs"] }
 protoc-wkt = "1.0.0"
 itertools = "0.12.1"
+indicatif = "0.17.8"
 
 [dev-dependencies]
 tempfile = "3.3.0"
